로그인 유지시간 연장, cors 설정 변경